--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ladder-streamkit-overlay",
+  "name": "splathon-ladder-streamkit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@acab/reset.css": "^0.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
+    "recoil": "^0.7.7",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
