--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
+    "firebase": "^9.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "reactfire": "^4.2.2",
     "recoil": "^0.7.7",
-    "usehooks-ts": "^2.9.1"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "firebase-tools": "^11.25.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
