--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
+    "deepmerge": "^4.3.1",
     "firebase": "^9.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "reactfire": "^4.2.2",
     "recoil": "^0.7.7",
+    "swr": "^2.1.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/deepmerge": "^2.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
