Ladder のデータを Firestore に格納する

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "cSpell.words": ["firestore", "chakra"]
+  "cSpell.words": ["firestore", "chakra", "Splathon", "Streamkit"]
 }
