--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
+    "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "firebase-tools": "^11.25.1",
+    "playwright": "^1.32.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
