ローカルの開発用に README を追加

--- a/firebase.json
+++ b/firebase.json
@@ -5,11 +5,7 @@
   },
   "hosting": {
     "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
@@ -19,10 +15,13 @@
   },
   "emulators": {
     "firestore": {
+      "host": "0.0.0.0",
       "port": 8080
     },
     "ui": {
-      "enabled": true
+      "enabled": true,
+      "host": "0.0.0.0",
+      "port": "4000"
     },
     "singleProjectMode": true
   }
