--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm-run-all -p dev:*",
+    "dev:vite": "vite",
+    "dev:firebase": "firebase emulators:start --import firebase/fixtures",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed:save": "firebase emulators:export firebase/fixtures"
   },
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
@@ -30,6 +33,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "firebase-tools": "^11.25.1",
+    "npm-run-all": "^4.1.5",
     "playwright": "^1.32.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
