--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev:firebase": "firebase emulators:start --import firebase/fixtures",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "seed:save": "firebase emulators:export firebase/fixtures"
+    "seed:save": "firebase emulators:export firebase/fixtures",
+    "lint": "npm-run-all lint:*",
+    "lint:eslint": "eslint --ext .ts,.tsx .",
+    "lint:prettier": "prettier --check ."
   },
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
@@ -31,10 +34,17 @@
     "@types/deepmerge": "^2.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "firebase-tools": "^11.25.1",
     "npm-run-all": "^4.1.5",
     "playwright": "^1.32.1",
+    "prettier": "^2.8.7",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
